--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {
     "jest": "^29.7.0",
