--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,9 @@
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "google-auth-library": "^9.0.0",
+    "apple-signin-auth": "^2.0.0"
   },
   "devDependencies": {
     "jest": "^29.7.0",
