--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,8 @@
     "express-validator": "^7.2.1",
     "google-auth-library": "^9.0.0",
     "jsonwebtoken": "^9.0.2",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "cheerio": "^1.0.0-rc.12"
   },
   "devDependencies": {
     "jest": "^29.7.0",
