--- a/.gitignore
+++ b/.gitignore
@@ -135,3 +135,8 @@ dist
 .yarn/install-state.gz
 .pnp.*
 *.sqlite
+
+# SQLite temp
+backend/orders.sqlite
+backend/orders.sqlite-shm
+backend/orders.sqlite-wal
