--- a/env.example
+++ b/env.example
@@ -12,6 +12,13 @@ PORT=3001
 NODE_ENV=development
 FRONTEND_ORIGIN=http://localhost:5173
 
+# Database Configuration (PostgreSQL)
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=annos_dev
+DB_USER=postgres
+DB_PASSWORD=your-postgres-password-here
+
 # Payment Providers (Development)
 PAYMENT_PROVIDER_SWISH_MOCK=true
 PAYMENT_PROVIDER_SWISH_CALLBACK_URL=http://localhost:3001/api/payments/callback
