--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,31 @@ jobs:
 
   test-backend:
     runs-on: ubuntu-latest
+    
+    services:
+      postgres:
+        image: postgres:14
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: testdb
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+    
+    env:
+      DB_HOST: localhost
+      DB_USER: postgres
+      DB_PASSWORD: postgres
+      DB_NAME: testdb
+      DB_PORT: 5432
+      JWT_SECRET: test-secret-key-for-testing-only
+      NODE_ENV: test
+    
     steps:
       - uses: actions/checkout@v3
       - name: Setup Node
@@ -36,6 +61,22 @@ jobs:
       - name: Install dependencies
         run: npm ci
         working-directory: backend
+      - name: Setup test database
+        run: |
+          # Wait for PostgreSQL to be ready
+          until pg_isready -h localhost -p 5432 -U postgres; do
+            echo "Waiting for PostgreSQL..."
+            sleep 2
+          done
+          # Create tables for testing
+          node createTables.js
+        working-directory: backend
+        env:
+          DB_HOST: localhost
+          DB_USER: postgres
+          DB_PASSWORD: postgres
+          DB_NAME: testdb
+          DB_PORT: 5432
       - name: Run tests
         run: npm test
         working-directory: backend
