--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,22 @@
     "prepush": "npm run lint && npm run build"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@hookform/resolvers": "^5.2.2",
+    "@mui/icons-material": "^7.3.5",
+    "@mui/material": "^7.3.5",
+    "@mui/x-data-grid": "^8.20.0",
+    "@mui/x-date-pickers": "^8.19.0",
+    "@tanstack/react-query": "^5.90.11",
+    "axios": "^1.13.2",
+    "date-fns": "^4.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.6.0"
+    "react-hook-form": "^7.67.0",
+    "react-router-dom": "^7.6.0",
+    "zod": "^4.1.13",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
