--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@mui/x-data-grid": "^8.20.0",
     "@mui/x-date-pickers": "^8.19.0",
     "@tanstack/react-query": "^5.90.11",
+    "@tanstack/react-query-devtools": "^5.91.1",
     "axios": "^1.13.2",
     "date-fns": "^4.1.0",
     "react": "^19.0.0",
